--- a/CODE/WMS_CODE.HTML
+++ b/CODE/WMS_CODE.HTML
@@ -1,3 +1,4 @@
+#Code for WMS layer
 <!DOCTYPE html>
 <html lang="en">
     <a href="http://localhost:8080/geoserver/wms/reflect?format=application/openlayers&layers=Russia:Asia_Russia">
